tests/ui/consts/const-eval/dont_promote_unstable_const_fn.stderr
error: const function that might be (indirectly) exposed to stable cannot use `#[feature(foo)]`
  --> $DIR/dont_promote_unstable_const_fn.rs:14:25
   |
LL | const fn bar() -> u32 { foo() }
   |                         ^^^^^
   |
   = help: mark the callee as `#[rustc_const_stable_indirect]` if it does not itself require any unsafe features
help: if the caller is not (yet) meant to be exposed to stable, add `#[rustc_const_unstable]` (this is what you probably want to do)
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | const fn bar() -> u32 { foo() }
   |
help: otherwise, as a last resort `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks (this requires team approval)
   |
LL + #[rustc_allow_const_fn_unstable(foo)]
LL | const fn bar() -> u32 { foo() }
   |

error[E0716]: temporary value dropped while borrowed
  --> $DIR/dont_promote_unstable_const_fn.rs:17:28
   |
LL |     let _: &'static u32 = &foo();
   |            ------------    ^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/dont_promote_unstable_const_fn.rs:21:28
   |
LL |     let _: &'static u32 = &meh();
   |            ------------    ^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/dont_promote_unstable_const_fn.rs:22:26
   |
LL |     let x: &'static _ = &std::time::Duration::from_millis(42).subsec_millis();
   |            ----------    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0716`.
